CHANGES.txt - 03/12/2003
------------------------

CHANGES IN CUPS V1.1.19

	- The cancel command now correctly supports the "-u
	  user" option to cancel all jobs for the named user.
	- The Purge-Jobs operation now supports the my-jobs
	  boolean attribute and a new purge-jobs boolean
	  attribute to control whether job history data is
	  purged from the scheduler; the default is false for
	  my-jobs and true for purge-jobs to match the original
	  implementation.
	- The scheduler would not timeout printers when only
	  using SLP browsing.
	- If the scheduler was unable to execute a filter, it
	  would try to restart the job indefinitely until the
	  filter could be executed.
	- When writing BSD printcap files, the scheduler now
	  includes the rm and rp attributes, allowing the file
	  to be exported to LPD clients. [Patch from Dominic
	  Kubla]
	- The scheduler optimization to reference IPP attribute
	  data instead of performing a full copy caused problems
	  when the referenced data was deleted before it was
	  sent.  It now only references attributes that change
	  only when the scheduler is restarted.  The change also
	  reduced the memory footprint of a printer object to
	  2k.
	- The scheduler now holds signals while logging messages
	  to avoid potential deadlock issues when handling
	  signals on Solaris 8.
	- The lpadmin command now allows printer access control
	  by group name as well as user name.
	- "lpoptions -l" got in an infinite loop if no default
	  printer was available.
	- The scheduler now logs the job-originating-host-name
	  attribute in the page_log file, and uses "-" for any
	  empty fields (patch from Dominik Kubla).
	- The pdftops filter now scales PDF pages within the
	  printable area of the page.
	- The pstops filter didn't include the page-label and
	  classification boxes when printing EPS or non-
	  conformant PS files.
	- The imagetops filter didn't always correctly position
	  the image on the page when printing in landscape